rm/httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-services
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: test-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: test-services
spec:
  selector:
    app: httpbin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
